package(
    default_applicable_licenses = ["//:license"],
    features = [
        "layering_check",
        "parse_headers",
    ],
)

cc_library(
    name = "utils",
    hdrs = ["test_utils.hh"],
    includes = ["."],
    visibility = ["//:__subpackages__"],
    deps = [
        "@gz-utils",
    ],
)
