load(
    "//ign_bazel:cmake_configure_file.bzl",
    "cmake_configure_file",
)

CMAKE_BINARY_DIR = "/tmp"

# Generates config.hh based on the version numbers in CMake code.
cmake_configure_file(
    name = "test_config",
    src = "test_config.h.in",
    out = "ignition/transport/log/test_config.h",
    cmakelists = ["CMakeLists.txt"],
    defines = [
        "CMAKE_SOURCE_DIR=%s" % (CMAKE_BINARY_DIR),
    ],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "test_utils",
    srcs = ["ignition/transport/log/test_config.h"],
    includes = ["."],
    visibility = ["//visibility:public"],
)

